@@ -58,7 +58,7 @@ AC_CONFIG_FILES([
         hal/hal-synce-rndis \
         hal/hal-synce-serial \
         bluetooth/hal-synce-bluetooth \
-        etc/synce-serial.conf] )
+        etc/synce-hal.conf] )
 
 AC_OUTPUT([
 	Makefile
