@@ -1,4 +1,0 @@
-# example config file, copy to @SYSCONFDIR@/synce-serial.conf
-
-# set the network used
-DEFAULT_NETWORK=192.168.131
