@@ -5,9 +5,10 @@ import os
 import re
 import subprocess
 import logging, logging.handlers
+import ConfigParser
 
-# log_level can be set to one of (prefixed by logging.)
-# DEBUG, INFO, WARNING, ERROR, CRITICAL
+# defaults
+config_file = '@SYSCONFDIR@/synce-hal.conf'
 log_level = logging.WARNING
 
 DEFAULT_DEVICE_IP = "169.254.2.1"
@@ -15,13 +16,9 @@ DEFAULT_LOCAL_IP = "169.254.2.2"
 DEFAULT_NETMASK = "255.255.255.0"
 DEFAULT_BROADCAST = "169.254.2.255"
 
-global device_ip
-global local_ip
-
 device_ip = False
 local_ip = False
 
-logger = None
 
 #
 # fall back to static config
@@ -105,21 +102,22 @@ def RunDhclient(iface):
 #
 # run dccm after the interface is configured
 #
-def RunDccm(py_log_level):
+def RunDccm():
 
     logger.debug("starting hal-dccm ...")
 
-    log_level = "1"
+    dccm_log_level = "1"
 
-    if py_log_level <= logging.DEBUG:
-        log_level = "6"
-    elif py_log_level <= logging.INFO:
-        log_level = "4"
-    elif py_log_level <= logging.WARNING:
-        log_level = "3"
+    if log_level <= logging.DEBUG:
+        dccm_log_level = "6"
+    elif log_level <= logging.INFO:
+        dccm_log_level = "4"
+    elif log_level <= logging.WARNING:
+        dccm_log_level = "3"
 
-    cmd_list = ["@LIBEXECDIR@/hal-dccm","--rndis","--device-ip="+device_ip, "--local-ip="+local_ip, "--log-level="+log_level]
+    cmd_list = ["@LIBEXECDIR@/hal-dccm","--rndis","--device-ip="+device_ip, "--local-ip="+local_ip, "--log-level="+dccm_log_level]
 
+    logger.debug("calling hal-dccm as:")
     logger.debug(cmd_list)
 
     try:
@@ -130,6 +128,83 @@ def RunDccm(py_log_level):
     return
 
 
+def ProcessConfig():
+
+    global log_level
+    global DEFAULT_DEVICE_IP
+    global DEFAULT_LOCAL_IP
+    global DEFAULT_NETMASK
+    global DEFAULT_BROADCAST
+
+    logger = logging.getLogger("hal-synce-rndis")
+
+    config = ConfigParser.ConfigParser()
+    try:
+        config.read(config_file)
+    except Exception,e:
+        logger.warning("failed to parse config file %s: %s" % (config_file, e))
+        return False
+
+    if config.has_option('general', 'loglevel'):
+        loglevel_txt = config.get('general', 'loglevel').lower()
+        if loglevel_txt == 'critical':
+            log_level = logging.CRITICAL
+        elif loglevel_txt == 'error':
+            log_level = logging.ERROR
+        elif loglevel_txt == 'warning':
+            log_level = logging.WARNING
+        elif loglevel_txt == 'info':
+            log_level = logging.INFO
+        elif loglevel_txt == 'debug':
+            log_level = logging.DEBUG
+        else:
+            logger.warning("found invalid loglevel in config file %s: %s" % (config_file, loglevel_txt))
+
+        logger.setLevel(log_level)
+
+    if config.has_option('rndis', 'static_device_ip'):
+        new_ip = config.get('rndis', 'static_device_ip')
+        
+        ip_re = re.compile('^(\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}$)')
+        ip_match = ip_re.match(new_ip)
+        if ip_match != None:
+            DEFAULT_DEVICE_IP = new_ip
+        else:
+            logger.warning("found invalid device_ip in config file %s: %s" % (config_file, new_ip))
+
+    if config.has_option('rndis', 'statis_local_ip'):
+        new_ip = config.get('rndis', 'static_local_ip')
+        
+        ip_re = re.compile('^(\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}$)')
+        ip_match = ip_re.match(new_ip)
+        if ip_match != None:
+            DEFAULT_LOCAL_IP = new_ip
+        else:
+            logger.warning("found invalid local_ip in config file %s: %s" % (config_file, new_ip))
+
+    if config.has_option('rndis', 'static_netmask'):
+        new_ip = config.get('rndis', 'static_netmask')
+        
+        ip_re = re.compile('^(\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}$)')
+        ip_match = ip_re.match(new_ip)
+        if ip_match != None:
+            DEFAULT_NETMASK = new_ip
+        else:
+            logger.warning("found invalid netmask in config file %s: %s" % (config_file, new_ip))
+
+    if config.has_option('rndis', 'static_broadcast'):
+        new_ip = config.get('rndis', 'static_broadcast')
+        
+        ip_re = re.compile('^(\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}$)')
+        ip_match = ip_re.match(new_ip)
+        if ip_match != None:
+            DEFAULT_BROADCAST = new_ip
+        else:
+            logger.warning("found invalid broadcast in config file %s: %s" % (config_file, new_ip))
+
+    return True
+
+
 #
 # main()
 #
@@ -137,7 +212,7 @@ if __name__ == '__main__':
 
     log_facility = logging.handlers.SysLogHandler.LOG_DAEMON
 
-    logging.basicConfig(level=log_level,
+    logging.basicConfig(level=logging.WARNING,
                         format='%(asctime)s %(name)s %(levelname)s : %(message)s')
     logger = logging.getLogger("hal-synce-rndis")
     sys_log = logging.handlers.SysLogHandler("/dev/log", log_facility)
@@ -145,28 +220,41 @@ if __name__ == '__main__':
     sys_log.setFormatter(syslog_form)
     logger.addHandler(sys_log)
 
-    if os.environ.has_key("HAL_PROP_NET_INTERFACE"):
-        iface = os.environ["HAL_PROP_NET_INTERFACE"]
+    if os.environ.has_key("HALD_ACTION"):
+        hald_action = os.environ["HALD_ACTION"]
     else:
         logger.warning("Hal environment not set")
         sys.exit(1)
 
-    logger.debug("running as addon for interface "+iface)
+    ProcessConfig()
 
-    RunDhclient(iface)
+    try:
+        iface = os.environ["HAL_PROP_NET_INTERFACE"]
+    except Exception,e:
+        logger.critical("Hal environment not set: %s" % e)
+        sys.exit(1)
 
-    if device_ip == False or local_ip == False:
-        logger.info("error running dhclient, trying static config")
 
-        RunIfconfig(iface)
+    if hald_action == "addon":
+        logger.debug("running as addon for interface "+iface)
+
+        RunDhclient(iface)
+
         if device_ip == False or local_ip == False:
-            logger.warning("failed to configure interface")
-            sys.exit(1)
+            logger.info("error running dhclient, trying static config")
 
-    logger.debug("successfully configured interface")
+            RunIfconfig(iface)
+            if device_ip == False or local_ip == False:
+                logger.warning("failed to configure interface")
+                sys.exit(1)
 
-    RunDccm(log_level)
+        logger.debug("successfully configured interface")
 
-    logger.error("exiting ...")
+        RunDccm()
+
+        logger.error("aborting ...")
+        sys.exit(1)
+
 
     sys.exit(0)
+
